NATTQA-ENV/force-app/main/default/objects/Contact/fields/Contact_Influence__c.field-meta.xml
<CustomField>
    <fullName>Contact_Influence__c</fullName>
    <description>Define the level of influence that a contact has within the decision-making process to do business with Carrier (Product or Service). This is updated from Response Object.</description>
    <label>Contact Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Product and Service Buyer</fullName>
            </value>
            <value>
                <fullName>Decision Influencer</fullName>
            </value>
            <value>
                <fullName>Product and Service User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>