NATTQA-ENV/force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>Contact type picklist for Container Users</description>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Contact</fullName>
            </value>
            <value>
                <fullName>Service Contact</fullName>
            </value>
            <value>
                <fullName>Parts Contact</fullName>
            </value>
            <value>
                <fullName>Warranty Contact</fullName>
            </value>
            <value>
                <fullName>Executive Contact</fullName>
            </value>
            <value>
                <fullName>Finance Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>