NATTQA-ENV/force-app/main/default/objects/Contact/fields/ContactSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactSafeID__c</fullName>
    <description>18 character Id for reporting purposes.</description>
    <formula>CASESAFEID(Id)</formula>
    <label>ContactSafeID</label>
    <type>Text</type>
</CustomField>