NATTQA-ENV/force-app/main/default/objects/Contact/fields/CONTAINER_Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify Primary contact record in service.</description>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>