NATTQA-ENV/force-app/main/default/objects/Contact/fields/Container_Service_Agreement_UCP__c.field-meta.xml
<CustomField>
    <fullName>Container_Service_Agreement_UCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Container Service Agreement (UCP)</label>
    <type>Checkbox</type>
</CustomField>