NATTQA-ENV/force-app/main/default/objects/Contact/fields/Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>Federation_ID__c</fullName>
    <label>Federation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>