NATTQA-ENV/force-app/main/default/objects/Contact/fields/Latest_NPS_Performance_of_our_Services__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Performance_of_our_Services__c</fullName>
    <label>Latest NPS Performance of our Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>