NATTQA-ENV/force-app/main/default/objects/Contact/fields/NAC_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>NAC_Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Ordering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
                <isActive>false</isActive>
                <label>Parts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>