NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Account_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Contact_Role__c</fullName>
    <label>Account Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Vice-President</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Billing Admin</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Parts Manager</fullName>
            </value>
            <value>
                <fullName>Warranty Manager</fullName>
            </value>
            <value>
                <fullName>Gerente de Compras</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>