NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Account_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Record_Type_Developer_Name__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type Developer Name</label>
    <type>Text</type>
</CustomField>