NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_AccountActiveContact__c.field-meta.xml
<CustomField>
    <fullName>NATT_AccountActiveContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Contacts</relationshipLabel>
    <relationshipName>ActiveContacts</relationshipName>
    <type>Lookup</type>
</CustomField>