NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_AccountInactiveContact__c.field-meta.xml
<CustomField>
    <fullName>NATT_AccountInactiveContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inactive Contacts</relationshipLabel>
    <relationshipName>InactiveContacts</relationshipName>
    <type>Lookup</type>
</CustomField>