NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_AccountNumber__c</fullName>
    <formula>Account.NATT_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountNumber</label>
    <type>Text</type>
</CustomField>