NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_AuthorizeDotNetProfileId__c.field-meta.xml
<CustomField>
    <fullName>NATT_AuthorizeDotNetProfileId__c</fullName>
    <description>Used to store the authorize.net profile Id created for a credit card transaction</description>
    <label>Authorize.net Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>