NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Number__c</fullName>
    <description>To sync up NAAT and TAVANT org</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Contact Number</label>
    <type>AutoNumber</type>
</CustomField>