NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Dealer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For NATT Use</description>
    <label>Dealer Agreement</label>
    <type>Checkbox</type>
</CustomField>