NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Dealer_Sales_History_Reports__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Sales_History_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Sales History Reports</label>
    <type>Checkbox</type>
</CustomField>