NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Distribution_Method__c</fullName>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>