NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_External_Key__c.field-meta.xml
<CustomField>
    <fullName>NATT_External_Key__c</fullName>
    <description>NATT: Used for the migration of Lotus Notes</description>
    <externalId>true</externalId>
    <label>NATT External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>