NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Invoices__c.field-meta.xml
<CustomField>
    <fullName>NATT_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoices</label>
    <type>Checkbox</type>
</CustomField>