NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Key_Business_Role__c.field-meta.xml
<CustomField>
    <fullName>NATT_Key_Business_Role__c</fullName>
    <description>NATT</description>
    <label>Key Business Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Co-Principal</fullName>
            </value>
            <value>
                <fullName>VP/Director</fullName>
            </value>
            <value>
                <fullName>VP/Director - Sales</fullName>
            </value>
            <value>
                <fullName>VP/Director - Parts</fullName>
            </value>
            <value>
                <fullName>VP/Director - Service</fullName>
            </value>
            <value>
                <fullName>VP/Director – Parts &amp; Service</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Parts Manager</fullName>
            </value>
            <value>
                <fullName>Warranty Manager</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Unit Sales Person</fullName>
            </value>
            <value>
                <fullName>Parts Sales Person</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Warranty Admin</fullName>
            </value>
            <value>
                <fullName>Billing Admin</fullName>
            </value>
            <value>
                <fullName>General Admin</fullName>
            </value>
            <value>
                <fullName>Corporate Officer</fullName>
            </value>
            <value>
                <fullName>Director General</fullName>
            </value>
            <value>
                <fullName>Subdirector</fullName>
            </value>
            <value>
                <fullName>Vice-Presidente/Director</fullName>
            </value>
            <value>
                <fullName>Gerente General</fullName>
            </value>
            <value>
                <fullName>Gerente de Sucursal</fullName>
            </value>
            <value>
                <fullName>Gerente de Ventas</fullName>
            </value>
            <value>
                <fullName>Gerente de Servicio</fullName>
            </value>
            <value>
                <fullName>Gerente de Partes</fullName>
            </value>
            <value>
                <fullName>Gerente de Garantías</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>