NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Most_Dealer_Business__c.field-meta.xml
<CustomField>
    <fullName>NATT_Most_Dealer_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For NATT Use</description>
    <label>Most Dealer Business</label>
    <type>Checkbox</type>
</CustomField>