NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Non_Warranty_Credit_Memos__c.field-meta.xml
<CustomField>
    <fullName>NATT_Non_Warranty_Credit_Memos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Warranty Credit Memos</label>
    <type>Checkbox</type>
</CustomField>