NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Ownership_Issues__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ownership_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For NATT</description>
    <label>Ownership Issues</label>
    <type>Checkbox</type>
</CustomField>