NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Parts_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_Sales_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Sales Person</label>
    <type>Checkbox</type>
</CustomField>