NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Record_Type_Developer_Name__c</fullName>
    <description>NATT formula to prevent having to query for the dev name in the contact trigger</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>