NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Refrigeration_Technician__c.field-meta.xml
<CustomField>
    <fullName>NATT_Refrigeration_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refrigeration Technician</label>
    <type>Checkbox</type>
</CustomField>