NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Sales_Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Order_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Order Contact</label>
    <type>Checkbox</type>
</CustomField>