NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Technician_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_Technician_ID__c</fullName>
    <description>number field so that it will sync with the similar field in the ett (tavant) org</description>
    <label>Technician ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>