NATTQA-ENV/force-app/main/default/objects/Contact/fields/NATT_Units_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>NATT_Units_Sales_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Units Sales Person</label>
    <type>Checkbox</type>
</CustomField>