NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps__c.field-meta.xml
<CustomField>
    <fullName>nps__c</fullName>
    <formula>IF(ISNULL(nps_Completed_Survey_Count__c ), 0,
(nps_Promoter_Count__c  -  nps_Detractor_Count__c ) / nps_Completed_Survey_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>