NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Completed_Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>nps_Completed_Survey_Count__c</fullName>
    <label>Completed Survey Count</label>
    <summaryForeignKey>nps_Feedback__c.nps_Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>