NATTQA-ENV/force-app/main/default/objects/Contact/fields/NPS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Contact</label>
    <type>Checkbox</type>
</CustomField>