NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Detractor_Count__c.field-meta.xml
<CustomField>
    <fullName>nps_Detractor_Count__c</fullName>
    <label>Detractor Count</label>
    <summaryFilterItems>
        <field>nps_Feedback__c.nps_Response_Main_score__c</field>
        <operation>lessThan</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>nps_Feedback__c.nps_Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>