NATTQA-ENV/force-app/main/default/objects/Contact/fields/NPS_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NPS_Escalation__c</fullName>
    <formula>if(NATT_Record_Type_Developer_Name__c=&quot;NATT_End_Customer&quot;,Case (
Text(NATT_Account_Contact_Role__c),
&apos;President&apos; , &apos;Management&apos;,
&apos;Vice-President&apos;, &apos;Management&apos;,
&apos;General Manager&apos;, &apos;Management&apos;,
&apos;Account Manager&apos;, &apos;Sales&apos;,
&apos;Billing Admin&apos;, &apos;Sales&apos;,
&apos;Shipping&apos;, &apos;Service&apos;,
&apos;Service Manager&apos;, &apos;Service&apos;,
&apos;Parts Manager&apos;, &apos;Parts&apos;,
&apos;Warranty Manager&apos;, &apos;Service&apos;,
&apos;Gerente de Compras&apos;, &apos;NA&apos;,
&apos;Other&apos;, &apos;Sales&apos;,
&apos;Purchasing Manager&apos;, &apos;Sales&apos;,&apos;NA&apos;), if(RecordType.DeveloperName=&quot;NATT_Dealer&quot;,Case (
Text(NATT_Key_Business_Role__c),
&apos;Principal&apos;, &apos;Management&apos;,
&apos;Co-Principal&apos;, &apos;Management&apos;,
&apos;VP/Director&apos;,&apos;Management&apos;,
&apos;VP/Director - Sales&apos;,&apos;Management&apos;,
&apos;VP/Director - Parts&apos;, &apos;Management&apos;,
&apos;VP/Director - Service&apos;, &apos;Management&apos;,
&apos;VP/Director – Parts &amp; Service&apos;, &apos;Management&apos;,
&apos;General Manager&apos;,&apos;Management&apos;,
&apos;Branch Manager&apos;,&apos;Sales&apos;,
&apos;Sales Manager&apos;,&apos;Sales&apos;,
&apos;Service Manager&apos;,&apos;Service&apos;,
&apos;Parts Manager&apos;,&apos;Parts&apos;,
&apos;Warranty Manager&apos;,&apos;Service&apos;,
&apos;Office Manager&apos;,&apos;Sales&apos;,
&apos;Unit Sales Person&apos;,&apos;Sales&apos;,
&apos;Parts Sales Person&apos;,&apos;Parts&apos;,
&apos;Technician&apos;,&apos;Service&apos;,
&apos;Warranty Admin&apos;,&apos;Service&apos;,
&apos;Billing Admin&apos;,&apos;Sales&apos;,
&apos;General Admin&apos;,&apos;Sales&apos;,
&apos;Corporate Officer&apos;,&apos;Management&apos;,
&apos;Director General&apos;, &apos;Management&apos;,
&apos;Subdirector&apos;, &apos;Management&apos;,&apos;NA&apos;),&apos;NA&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Escalation</label>
    <type>Text</type>
</CustomField>