NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Include_in_surveys__c.field-meta.xml
<CustomField>
    <fullName>nps_Include_in_surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include_in_surveys</label>
    <type>Checkbox</type>
</CustomField>