NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Latest_delivery_of_our_product__c.field-meta.xml
<CustomField>
    <fullName>nps_Latest_delivery_of_our_product__c</fullName>
    <label>Latest delivery of our product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>