NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_LTR__c.field-meta.xml
<CustomField>
    <fullName>nps_LTR__c</fullName>
    <formula>IF(ISNULL(nps_Completed_Survey_Count__c ), 0, nps_Sum_of_Scores__c / nps_Completed_Survey_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>