NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Promoter_Count__c.field-meta.xml
<CustomField>
    <fullName>nps_Promoter_Count__c</fullName>
    <label>Promoter Count</label>
    <summaryFilterItems>
        <field>nps_Feedback__c.nps_Response_Main_score__c</field>
        <operation>greaterOrEqual</operation>
        <value>9</value>
    </summaryFilterItems>
    <summaryForeignKey>nps_Feedback__c.nps_Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>