NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Role__c.field-meta.xml
<CustomField>
    <fullName>nps_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>