NATTQA-ENV/force-app/main/default/objects/Contact/fields/nps_Sum_of_Scores__c.field-meta.xml
<CustomField>
    <fullName>nps_Sum_of_Scores__c</fullName>
    <label>Sum of Scores</label>
    <summarizedField>nps_Feedback__c.nps_Response_Main_score__c</summarizedField>
    <summaryForeignKey>nps_Feedback__c.nps_Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>