NATTQA-ENV/force-app/main/default/objects/Contact/fields/OptOut_NPS__c.field-meta.xml
<CustomField>
    <fullName>OptOut_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptOut_NPS</label>
    <type>Checkbox</type>
</CustomField>