NATTQA-ENV/force-app/main/default/objects/Contact/fields/Response_LikelyHood__c.field-meta.xml
<CustomField>
    <fullName>Response_LikelyHood__c</fullName>
    <label>Latest NPS Likelihood to recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>