NATTQA-ENV/force-app/main/default/objects/Contact/fields/UCP_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>UCP_Permission_Set__c</fullName>
    <label>UCP Permission Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCP All</fullName>
            </value>
            <value>
                <fullName>UCP Purchase</fullName>
            </value>
            <value>
                <fullName>UCP Warranty</fullName>
            </value>
            <value>
                <fullName>UCP Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>