NATTQA-ENV/force-app/main/default/objects/Contact/fields/UCP_Region__c.field-meta.xml
<CustomField>
    <fullName>UCP_Region__c</fullName>
    <label>UCP Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>SG/HK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>