NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/CONTAINER_Contact.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_Contact</fullName>
    <active>true</active>
    <description>CONTAINER Contacts</description>
    <label>CONTAINER Contact</label>
</RecordType>