NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/CTBR_Competitor.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Competitor</fullName>
    <active>true</active>
    <label>CTBR Competitor</label>
</RecordType>