NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/CTBR_Customer.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Customer</fullName>
    <active>true</active>
    <label>CTBR Customer</label>
</RecordType>