NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/CTBR_Dealer.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Dealer</fullName>
    <active>true</active>
    <label>CTBR Dealer</label>
</RecordType>