NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/MX_Competitor.recordType-meta.xml
<RecordType>
    <fullName>MX_Competitor</fullName>
    <active>true</active>
    <description>CTM Competitor Contacts</description>
    <label>CTM Competitor</label>
</RecordType>