NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/MX_Customer.recordType-meta.xml
<RecordType>
    <fullName>MX_Customer</fullName>
    <active>true</active>
    <description>CTM End Customer Contact</description>
    <label>CTM Customer</label>
</RecordType>