NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/MX_Dealer.recordType-meta.xml
<RecordType>
    <fullName>MX_Dealer</fullName>
    <active>true</active>
    <description>CTM Dealer Contacts</description>
    <label>CTM Dealer</label>
</RecordType>