NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NAOCAP_End_Customer.recordType-meta.xml
<RecordType>
    <fullName>NAOCAP_End_Customer</fullName>
    <active>true</active>
    <description>NAOCAP Customer Contacts</description>
    <label>NAOCAP End Customer</label>
</RecordType>