NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NATT_Competitor.recordType-meta.xml
<RecordType>
    <fullName>NATT_Competitor</fullName>
    <active>true</active>
    <description>NATT Competitor Contacts</description>
    <label>NATT Competitor</label>
</RecordType>