NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NATT_Dealer.recordType-meta.xml
<RecordType>
    <fullName>NATT_Dealer</fullName>
    <active>true</active>
    <description>NATT Dealer Contacts</description>
    <label>NATT Dealer</label>
</RecordType>