NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NATT_Direct_Sell_Internal.recordType-meta.xml
<RecordType>
    <fullName>NATT_Direct_Sell_Internal</fullName>
    <active>true</active>
    <description>NATT Direct Sell/Internal Contacts</description>
    <label>NATT Direct Sell/Internal</label>
</RecordType>