NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NATT_End_Customer.recordType-meta.xml
<RecordType>
    <fullName>NATT_End_Customer</fullName>
    <active>true</active>
    <description>NATT End Customer Contact</description>
    <label>NATT End Customer</label>
</RecordType>