NATTQA-ENV/force-app/main/default/objects/Contact/recordTypes/NATT_Inactive_Contact.recordType-meta.xml
<RecordType>
    <fullName>NATT_Inactive_Contact</fullName>
    <active>true</active>
    <description>NATT Inactive Contact</description>
    <label>NATT Inactive Contact</label>
</RecordType>