NATTQA-ENV/force-app/main/default/objects/Contact/validationRules/NATT_Cannot_Create_and_Edit_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Cannot_Create_and_Edit_Contact</fullName>
    <active>true</active>
    <description>Inactive Contacts are not allowed to Create or Edit Contacts</description>
    <errorConditionFormula>$User.NATT_Inactive_Contact__c</errorConditionFormula>
    <errorMessage>Inactive Contacts are not allowed to Create or Edit Contacts</errorMessage>
</ValidationRule>