NATTQA-ENV/force-app/main/default/objects/Contact/validationRules/NATT_Cannot_Create_Inactive_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Cannot_Create_Inactive_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NATT_Record_Type_Developer_Name__c = &apos;NATT_Inactive_Contact&apos;)</errorConditionFormula>
    <errorMessage>You cannot create an inactive contact.</errorMessage>
</ValidationRule>