NATTQA-ENV/force-app/main/default/objects/Contact/validationRules/NATT_Cannot_Modify_Contact_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Cannot_Modify_Contact_Types</fullName>
    <active>true</active>
    <description>Prevent users other than the Dealer Master User from editing contacts of certain types</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Contact_Type_Validation=false,
LEFT(RecordType.DeveloperName,4)=&apos;NATT&apos;, 
OR(ISPICKVAL(NATT_Key_Business_Role__c, &quot;Principal&quot;),
   ISPICKVAL(NATT_Key_Business_Role__c, &quot;Co-Principal&quot;), 
   ISPICKVAL(NATT_Key_Business_Role__c, &quot;Corporate Officer&quot;))
)</errorConditionFormula>
    <errorDisplayField>NATT_Key_Business_Role__c</errorDisplayField>
    <errorMessage>You many not create or modify a contact with this Key Business Role.</errorMessage>
</ValidationRule>