NATTQA-ENV/force-app/main/default/objects/Contact/validationRules/NATT_Group_Account_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Group_Account_Contact</fullName>
    <active>true</active>
    <description>Only the Dealer Master User should be able to modify contacts that are related to group accounts</description>
    <errorConditionFormula>AND(
Account.RecordType.DeveloperName = &quot;NATT_Group_Ownership&quot;,
$Permission.NATT_Bypass_Group_Account = FALSE
)</errorConditionFormula>
    <errorMessage>You do not have permission to modify Contacts related to Group Ownership Accounts.</errorMessage>
</ValidationRule>