NATTQA-ENV/force-app/main/default/objects/Contact/validationRules/Provide_Valid_Technician_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Valid_Technician_ID</fullName>
    <active>true</active>
    <description>Text field to accept only numbers</description>
    <errorConditionFormula>AND(
NOT($Permission.NATT_Bypass_Validation_Rule ),
NOT(ISBLANK(NATT_Technician_ID__c)),
OR(CONTAINS(NATT_Technician_ID__c,&apos;.&apos;),
AND(NOT(ISNUMBER(NATT_Technician_ID__c)),
NOT( REGEX( NATT_Technician_ID__c, &quot;[0-9]&quot;))
)
)
)</errorConditionFormula>
    <errorMessage>Technician Id must be only a numerical value maximum 18 characters.</errorMessage>
</ValidationRule>